--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://kit.fontawesome.com/477672e51a.js" crossorigin="anonymous"></script>
-    <title>React App</title>
+    <title>Dad Jokes Demo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
